# aarya

./: .env.dev  .env.prod  .firebaserc  .gitignore  Cargo.toml  mariadb-docker.session.sql  package-lock.json  package.json  postman.http  readme.md  rustfmt.toml
.database/: alter.sql  blog-app-schema.sql  original_schema.sql  web-app-schema.sql
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
.prompts/: csa-ch01  csa-ch02  csa-ch03  prompt.txt
.prompts/co-2-ch-1/: prompt.txt
.schema/: authors-schema.json  chapters-schema.json  courses-schema.json  post-manifest-schema.json  question-schema.json  tags-schema.json  topics-schema.json
.syllabus/: ap-csa.json  ap-csp.json
.temp-data/: dump-040724.json
.zed/: settings.json
api/: Cargo.toml
api/src/: main.rs
api/src/entities/: chapter_entity.rs  chapters.rs  course_entity.rs  courses.rs  mod.rs  question_entity.rs  result_type.rs  test_entity.rs
api/src/services/: chapters.rs  courses.rs  mod.rs  question_service.rs  questions.rs
blog_app/: .gitignore  Cargo.toml  package-lock.json  package.json  tailwind.config.js
blog_app/assets/schema/: author-schema.json  post-schema.json  tag-schema.json
blog_app/assets/scripts/: author.js  post.js  tag.js
blog_app/assets/styles/: input.css  output.css  prism.css
blog_app/manifests/: 2024-01-15-some-random-post.json
blog_app/pages/: blog-post.hbs  footer.hbs  head.hbs  header.hbs  index-latest.hbs  index.hbs  main.hbs  newsletter.hbs  post.hbs  tag.hbs
blog_app/pages/admin/: admin-main.hbs  author-create.hbs  author-edit.hbs  author-list.hbs  post-create.hbs  post-edit.hbs  post-list.hbs  side-panel.hbs  tag-create.hbs  tag-edit.hbs  tag-list.hbs
blog_app/pages/index/: blog-by-tags.hbs  blog-featured.hbs  blog-hero.hbs  blog-home.hbs
blog_app/posts/: 2024-01-15-some-random-post.md  some-random-post.md
blog_app/src/: main.rs  models.rs  pages.rs
blog_app/src/api/: files.rs  mod.rs  photos.rs
blog_app/src/entities/: blogs.rs  mod.rs  result_types.rs
blog_app/src/pages/: blogs.rs  index.hbs  mod.rs  post.hbs  tag.hbs
blog_app/src/pages/admin/: author.rs  mod.rs  post.rs  tag.rs
blog_app/src/utils/: date_ops.rs  db_ops.rs  environ.rs  file_ops.rs  hash_ops.rs  image_ops.rs  json_ops.rs  mod.rs  random_ops.rs  string_ops.rs
cli/: Cargo.toml
cli/src/: main.rs  question_ops.rs
cli_app/: Cargo.toml  script21.sh
cli_app/src/: handlers.rs  main.rs
cli_app/src/handlers/: autogen.rs  autogener.rs  batchgener.rs  batchuploader.rs  blogposter.rs  mod.rs  seeder.rs  uploader.rs  validate.rs  validator.rs
data_models/: Cargo.toml  entities.rs  models.rs
database/: original_schema.sql
entities/: Cargo.toml  blogs.rs  chapters.rs  courses.rs  lib.rs  questions.rs  tests.rs  topics.rs
frontends/clap_cli/: Cargo.toml
frontends/dioxus_wass/: Cargo.toml
frontends/leptos_wasm/: Cargo.toml  index.html  trunk.toml
frontends/leptos_wasm/src/: main.rs
frontends/leptos_wasm/src/components/: chapters.rs  courses.rs  mod.rs
frontends/yew_wasm/: Cargo.toml  index.html
frontends/yew_wasm/src/: main.rs
functions/: package-lock.json  tsconfig.dev.json  tsconfig.json
macros/: Cargo.toml
macros/src/: lib.rs
models/: Cargo.toml  lib.rs  question_model.rs
models/src/: default_response.rs  lib.rs
models/src/auth/: base64_qs_model.rs  email_qs_model.rs  forgot_password.rs  login.rs  mod.rs  reset_password.rs  signup.rs  verify_email.rs
models/src/database/: course.rs  mod.rs  question.rs  student.rs
routes/: Cargo.toml
routes/src/auth/: activate_account.rs  forgot_password.rs  login.rs  mod.rs  reset_password.rs  signup.rs
src/: db_ops.rs  login_model.rs  login_route.rs  macros.rs  main.rs  model_api_response.rs  model_login.rs  model_signup.rs  ops_db.rs  route_signup.rs  signup_model.rs  signup_route.rs  signup_tests.rs  test_ops.rs  test_signup.rs  util_random.rs
src/database/: original_schema.sql
src/errors/: email_error.rs  mod.rs  model_error.rs
src/models/: default_response.rs  mod.rs  question.rs  question_mongo.rs  signup_model.rs  user.rs
src/routes/: login.rs  signup.rs  signup_route.rs
src/tests/: mod.rs  test_assignment_student.rs  test_assignment_topic.rs  test_course.rs  test_feedback.rs  test_payment.rs  test_question.rs  test_question_topic.rs  test_questions.rs  test_questions_mongo.rs  test_signup.rs  test_signup_mongo.rs  test_student.rs  test_test_topic.rs  test_topic.rs  test_user.rs  test_users.rs  (+2 more)
static/: form-validator.js
templates/: auth_login.html.tera  auth_signup.html  auth_signup.html.tera  base.html  base.html.tera  footer.html.tera  header.html.tera  signup.html.hbs
tests/: Cargo.toml
tests/src/: lib.rs
tests/src/database/: mod.rs  test_course.rs  test_question.rs  test_student.rs
tests/src/routes/: mod.rs  test_forgot_password.rs  test_login.rs  test_signup.rs  test_verify_email.rs
tests/src/utils/: mod.rs  test_email_sender.rs  test_image_ops.rs  test_json.rs  test_openai_ops.rs  test_timestamps.rs
utils/: Cargo.toml
utils/src/: db_ops.rs  email_sender.rs  encoder.rs  environ.rs  file_ops.rs  hash_ops.rs  hasher.rs  image_ops.rs  json_ops.rs  lib.rs  openai.rs  openai_ops.rs  random.rs  timestamps.rs  util_error.rs
utils/src/api/: mod.rs
utils/src/api/entities/: error_type.rs  mod.rs  question_entity.rs
utils/src/api/models/: mod.rs  question_model.rs
web/: Cargo.toml
web/src/: main.rs
web/templates/: base.html
web/templates/auth/activate-account/: confirmation.html  email-sent.html
web_app/: Cargo.toml
web_app/pages/: config-test.hbs  footer.hbs  head.hbs  header.hbs  index.hbs  start-test.hbs
web_app/src/: apis.rs  macros.rs  main.rs  pages.rs
web_app/src/api/: chapters.rs
web_app/src/entities/: chapters.rs  courses.rs  mod.rs  questions.rs  tests.rs
web_app/src/pages/: index.rs
web_app/src/routes/: index.rs
web_app/src/services/: chapters.rs  courses.rs  questions.rs
web_app/templates/: body.hbs  chapters.hbs  courses.hbs  footer.hbs  head.hbs  header.hbs  index.hbs  start-test.hbs  test_info.hbs  tests.hbs
(+73 files in other folders)
