[package]
name = "aarya-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
mockall = "0.12.1"
mongodb = "2.0"
bson = "2.0"
futures = "0.3.30"
tokio = "1.36.0"
async-trait = "0.1.78"
serde_json = "1.0"
rand = "0.8.5"