[workspace]
resolver = "2"
members = ["macros", "models", "routes", "utils", "tests", "web", "cli"]

# [dependencies]
# actix-web = { version = "4.5.1", features = ["macros"] }
# serde = { version = "1.0", features = ["derive"] }
# futures = "0.3.30"
# tokio = { version = "1.36.0", features = ["full"] }
# async-trait = "0.1.78"
# serde_json = "1.0"
# rand = "0.8.5"
# validator = { version = "0.17.0", features = ["derive"] }
# tera = "1.19.1"
# dotenv = "0.15.0"
# sqlx = { version = "0.7.4", features = [
#     "mysql",
#     "runtime-tokio-native-tls",
#     "time",
#     "macros",
# ] }
# time = "0.3.34"
# lettre = { version = "0.11.5", features = [
#     "tokio1",
#     "smtp-transport",
#     "tokio1-native-tls",
# ] }
# bcrypt = "0.15.1"
# crc32fast = "1.4.0"
# url = "2.5.0"
# log = "0.4.21"
# env_logger = { version = "0.11.3", features = ["auto-color"] }
# colored = "2.1.0"
# jsonschema = "0.17.1"
