[package]
name = "aarya_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["color", "derive"] }
aarya_utils = { path = "../utils", version = "*" }
aarya_models = { path = "../models", version = "*" }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "time",
    "macros",
] }
async-openai = "0.20.0"
reqwest = { version = "0.12", features = ["json"] }
