[package]
name = "aarya_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["color", "derive"] }
aarya_utils = { path = "../utils", version = "*" }
aarya_entities = { path = "../entities", version = "*" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39.3", features = ["full"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = [
    "mysql",
    "runtime-tokio", 
    "tls-rustls",
    "json",
    "macros",
] }
