[package]
name = "aarya_entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarya_utils = { path = "../utils", version = "*"}
validator = { version = "0.18.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = [
    "mysql",
    "runtime-tokio", 
    "tls-rustls",
    "json",
    "macros",
    "chrono"
] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "models"
path = "lib.rs"
