[package]
name = "aarya_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0"
rand = "0.8.5"
validator = { version = "0.17.0", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "time",
    "macros",
] }
time = "0.3.34"
aarya_utils = { path = "../utils", version = "*" }
