[package]
name = "aarya_routes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarya_utils = { path = "../utils", version = "*" }
aarya_models = { path = "../models", version = "*" }
aarya_macros = { path = "../macros", version = "*" }
actix-web = { version = "4.5.1", features = ["macros"] }
validator = { version = "0.17.0", features = ["derive"] }
log = "0.4.21"
sqlx = { version = "0.7.4", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "time",
    "macros",
] }
tera = "1.19.1"
colored = "2.1.0"
time = "0.3.34"
