[package]
name = "aarya_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarya_utils = { path = "../utils", version = "*" }
aarya_models = { path = "../models", version = "*" }
aarya_macros = { path = "../macros", version = "*" }
aarya_routes = { path = "../routes", version = "*" }
sqlx = { version = "0.7.4", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "time",
    "macros",
] }
actix-web = { version = "4.5.1", features = ["macros"] }
tokio = { version = "1.36.0", features = ["full"] }
tera = "1.19.1"
time = "0.3.34"
serde_json = "1.0"
