[package]
name = "aarya_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde_json = "1.0"
bcrypt = "0.15.1"
crc32fast = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.21"
time = "0.3.34"
jsonschema = "0.17.1"
url = "2.5.0"
thiserror = "1.0.58"
sqlx = { version = "0.7.4", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "time",
    "macros",
] }
dotenv = "0.15.0"
