[package]
name = "aarya_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarya_utils = { path = "../utils", version = "*" }
aarya_entities = { path = "../entities", version = "*" }
actix-web = { version = "4.9.0", features = ["macros"] }
sqlx = { version = "0.7.4", features = [
    "mysql",
    "runtime-tokio", 
    "tls-rustls",
    "json",
    "macros",
] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
validator = { version = "0.18.1", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
actix-cors = "0.7.0"
handlebars = {version="5.1.2"}

