[package]
name = "leptos_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarya_models = { path = "../../models", version = "*" }
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
gloo-net = "0.5.0"
leptos = {version="0.6.11", features = ["csr"]}
serde = {version="1.0.198", features = ["derive"]}
serde_json = "1.0.116"
