[package]
name = "aarya_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0.116"
yew = { version = "0.21.0", features = ["csr"] }
gloo = "0.11.0"
gloo-net = "0.5.0"
wasm-bindgen-futures = "0.4.42"
